/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.Wholesale.Contracts.Events";

/*
 * ProcessResultCalculated Integration Event.
 *
 * The process type is provided in the MessageType, which is available in the message meta data according to ADR-008.
 * See file `./ProcessCompleted.cs` for currently supported process types.
 */
message ProcessResultCalculated {

  /*
   * The ID of the batch containing the process.
   * The ID is a UUID consisting of hexadecimal digits in the form XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX.
   * Example: 65801e3c-5131-426e-b1bb-7b186349c996
   */ 
  string batch_id = 1; // TODO: Message meta data?

  // TODO: Rearrange indexes
  Grouping grouping = 999;
  
  enum Grouping {
    GRID_AREA = 0;
    ENERGY_SUPPLIER = 1;
    BALANCE_RESPONSIBLE_PARTY = 2;
    ENERGY_SUPPLIER_PER_BALANCE_RESPONSIBLE_PARTY = 3;
  }

  optional string GroupingActorGln = 998;
  
  ProcessType process_type = 2;
  
  enum ProcessType {
    BALANCE_FIXING = 0;
    AGGREGATION = 1;
  }
  
  /*
   * The grid area code uniquely defining the process in the batch.
   * The grid area code is a 3 character string consisting solely of digits.
   * Examples:
   *   543
   *   020
   */
  string grid_area_code = 3;

  TimeSeriesType time_series_type = 4; 
  
  enum TimeSeriesType {
    TOTAL_PRODUCTION = 0;
    NON_PROFILED_CONSUMPTION = 1;
    FLEX_CONSUMPTION = 2;
  }
  
  /*
   * The beginning of the calculation period.
   * The time is included in the period and is identical to the time of the first time series point
   * in the process time series type results.
   */
  google.protobuf.Timestamp period_start_utc = 5;

  /*
   * The end of the calculation period.
   * The time is excluded from the period.
   */
  google.protobuf.Timestamp period_end_utc = 6;
  
  Resolution resolution = 7;
  
  enum Resolution {
    QUARTER = 0;
  }
  
  QuantityUnit quantity_unit = 8;
  
  enum QuantityUnit {
    KWH = 0;
  }
  
  repeated TimeSeriesPoint points = 9;
  
  message TimeSeriesPoint {
    google.protobuf.Timestamp time = 1;
    
    DecimalValue quantity = 2;

    message DecimalValue {

      // The whole units of the amount.
      int64 units = 1;

      // Number of nano (10^-9) units of the amount.
      // The value must be between -999,999,999 and +999,999,999 inclusive.
      // If `units` is positive, `nanos` must be positive or zero.
      // If `units` is zero, `nanos` can be positive, zero, or negative.
      // If `units` is negative, `nanos` must be negative or zero.
      // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.
      int32 nanos = 2;
    }
    
    // TODO: We'll exactly one until we change the behavior due to eBIX
    repeated QuantityQuality quantity_qualities = 3;
    
    enum QuantityQuality {
      READ = 0;
      MEASURED = 1;
      MISSING = 2;
      CALCULATED = 3; // TODO: Include this one? What about INCOMPLETE?
    }
  }
}
